<resources>
    <string name="app_name">Uni Cinema</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_account">Tài khoản</string>

    <string name="menu_order">Mua vé</string>
    <string name="menu_movie">Phim</string>
    <string name="menu_theater">Rạp</string>
    <string name="menu_discount">Khuyến mãi</string>
    <string name="menu_gift">Quà tặng</string>
    <string name="menu_contact">Liên hệ</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>