<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_order"
            android:title="@string/menu_order" />
        <item
            android:id="@+id/menu_movie"
            android:title="@string/menu_movie" />
        <item
            android:id="@+id/menu_theater"
            android:title="@string/menu_theater" />
        <item
            android:id="@+id/menu_discount"
            android:title="@string/menu_discount" />
        <item
            android:id="@+id/menu_gift"
            android:title="@string/menu_gift" />
        <item
            android:id="@+id/menu_contact"
            android:title="@string/menu_contact" />

    </group>
</menu>